--- a/_posts/2015-7-8-kafka.md
+++ b/_posts/2015-7-8-kafka.md
@@ -103,7 +103,7 @@ broker注册表、consumer注册表、从属注册表、offset注册表在Zookee
 当某个consumer group中有多个consumer时，broker或者consumer发生变动时每一个consumer都会得到通知。然而，各consumer得到通知的时间可能会有些许差异。所以一个consumer有可能会试图获取另外一个consumer所拥有的分区。当此情况发生时，第一个consumer将直接释放他所拥有的所有分区，等待一会儿然后重试负载均衡过程。在实际中，负载均衡过程通常会在几次尝试后就稳定下来。
 
 当一个新consumer group创建时，offset注册表中没有offset信息。在这种情况下，通过使用我们所提供的broker的API，consumer可从所订阅分区的最小或者最大的offset开始获取消息，具体依配置而定。
-##3.3 传送保证
+###3.3 传送保证
 通常，Kafka仅保证“至少一次”的消息传送。“确保一次”的消息传送一般要求两阶段提交协议，这在我们的应用中不是必须的。绝大多数时候，消息能够“确保一次”传送给每个consumer group。然而当consumer 进程崩溃没有正常关闭时，接管失效consumer所拥有的那些分区的consumer进程可能会获取到一些重复的消息，这些消息是上次失效consumer成功提交到ZooKeeper的offset之后的，处理过但未及提交的那些消息。如果应用对这种重复不能接受，那么它必须自行添加重复删除逻辑，这可以使用consumer接收到的offset信息，或者消息中的唯一键值来实现。这种方案通常比两阶段提交协议更加经济有效。
 
 Kafka保证单个分区内的消息传送的有序性。然而来自于不同分区的消息之间不能保证先后顺序。
