--- a/_posts/2015-7-8-kafka.md
+++ b/_posts/2015-7-8-kafka.md
@@ -123,26 +123,9 @@ Kafka保证单个分区内的消息传送的有序性。然而来自于不同分
 
 通过实现一个特殊的Kafka input format，我们可将数据加到hadoop集群。这允许MapReduce作业直接从Kafka中读取数据。一个MapReduce作业加载原始数据然后进行分组和压缩，使得未来可进行高效处理。broker的无状态性和客户端存储消息offset的方案在此又一次显示出了优势，这使得MapReduce任务管理（允许任务失效和重启）能够以自然的方式处理数据加载，当任务重启时不会产生数据重复和丢失的情况。仅当作业成功完成时，数据和offset才会一起被存储在HDFS中。
 
-我们选择使用Avro作为我们的序列化协议，因为它高效且支持schema演化。对每条消息，我们存储它的Avro schema的id和序列化后的字节载荷。
+我们选择使用Avro作为我们的序列化协议，因为它高效且支持schema演化。对每条消息，我们存储它的Avro schema的id和序列化后的字节载荷。我们可以藉此schema施加契约确保producer和consumer之间的数据兼容性。我们使用一个轻量级的schema注册服务将schema id映射到实际的schema。当consumer获取一条信息时，它在schema注册表中查找并读取schema，然后使用该schema将字节数据解码成对象（对每个schema查找过程只需要执行一次，因为schema是不可变的值）。
+## 5、6 （从略）
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-(todo)
 
 
 
