--- a/_posts/2015-8-15.md
+++ b/_posts/2015-8-15.md
@@ -7,7 +7,7 @@ author: 灵元
 
 
 ## 1 介绍
-实时流数据处理的应用场景非常广泛，如实时统计分析，在线机器学习等。支撑实时流处理数据的系统通常有如下功能需求：（1）可伸缩性，运营团队可以容易地在系统中地添加、删除计算节点，而不影响正在运行的数据流处理作业（2）可恢复性，又称作“弹性”，在大规模集成系统中，容灾是一个必备的特性（3）可扩展性，也即在该系统中，要能够容易地实现新的处理逻辑（4）易于管理。
+实时流数据处理的应用场景非常广泛，如实时统计分析，在线机器学习等。支撑实时流处理数据的系统通常有如下功能需求：（1）可伸缩性，运营团队可以容易地在系统中地添加、删除计算节点，而不影响正在运行的数据流处理作业（2）可恢复性，又称作“弹性”，在大规模集成系统中，容灾是一个必备的特性（3）可扩展性，也即在该系统中，要能够容易地实现新的处理逻辑。
 
 与hadoop mapreduce,spark 等批处理系统不同，流处理框架所处理的是连续数据流，这意味着作业将一直运行，所有的task同时启动着。虽然两者的计算逻辑都可以用map，group，reduce等基本操作构造而成，但流计算通常会引入状态管理和消息传递的可靠性问题，这引入了额外的复杂性。
 
@@ -18,8 +18,8 @@ author: 灵元
 3. 数据交互，任务节点之间的数据流是如何关联起来的
 4. 并行机制，为了支持大规模数据计算，一个数据流不大可能仅在一台机器上处理，因此流计算框架要能够对数据流进行切分，并且分配到几个并发的计算实例上去
 5. 消息传送保障机制
-6. 窗口与状态管理
-6. 失效恢复
+
+[](6. 窗口与状态管理6. 失效恢复)
 
 本文将从这几个角度介绍几个流行的分布式流计算框架。
 
@@ -27,10 +27,18 @@ author: 灵元
 
 ## 2 storm
 
-###2.1 storm流计算概览
+###2.1 storm概览
 
-  画图，展示各组成结构
- 考虑叙述整体运行过程，从TopologySubbmiter开始。
+storm体系结构主要包括Nimbus、Supervisor、Zookeeper、Worker这几个组件。
+Nimbus是系统的master节点，负责接收来自于客户提交的计算任务及与之相关的jar文件，Supervisor运行在计算节点上，与Nimbus通信并且分配任务(task)给worker进程执行，还监控worker的运行状态。woker开启若干个线程运行分给它的任务。
+<div align="center"> ![Alt miss](/media/storm-arch.png) </div>
+[](考虑叙述整体运行过程，从TopologySubbmiter开始。)
+
+
+计算任务是由spout、bolt这两种任务组成的数据流图，称为Toplogy。topology中的消息流始自spout任务，中间经过若干bolt任务而将结果消息发送到系统之外。spout、bolt任务的种类可以有多重，并且同种类的任务会有多个实例，使用多个实例实现计算并行，从而获得处理大规模数据的能力。
+<div align="center">![Alt miss](/media/storm-task.png)</div>
+
+
 
 ###2.2 数据流模型
 
@@ -145,58 +153,87 @@ builder.setBolt("count", new WordCount(), 20)
 ####2.4.2 task数量配置
 TopologyBuilder的setBolt方法有个参数parallelism_hint用来设置组件的并发度,注意这不等于生成的task的数目，而是运行该组件的线程数目，只不过默认线程数目等于task数目罢了。task数目可以用setBolt方法返回的BoltDeclarer对象的setNumTasks方法来设置。
 
-####2.5 消息传送保障机制
-storm支持“最多一次”、“精确一次”两种消息保障，第一种不需多说，因tcp协议不会重复发送消息，因此task发送了消息不管就行了。支持“精确一次”则有些复杂，我们主要讨论它。
+###2.5 消息传送保障机制
+storm支持“最多一次”、“至少一次”,"精确一次"三种消息保障，第一种不需多说，因tcp协议不会重复发送消息，因此task发送了消息不管就行了。“精确一次”也叫“事务”，通过Trident API来支持。这里我们主要讨论“至少一次”，然后简述一下支持“精确一次”的内容。
 
+####2.5.1 至少一次
 与tcp协议类似，“精确一次”传送依赖于ack操作。storm为此引入了一个特别的AckBolt负责跟踪tuple在是否经过topology被正确处理了。一个tuple被正确处理了，当且仅当tuple以及所有依赖于该tuple的新产生的tuple都被正确处理了。tuple以及依赖于它的所有tuple构成了一个DAG图。如在上面提到的词数统计中，spout产生的每一条句子构成一棵树（DAG的特例）：
-<div align="center"><img width="80%" src="/media/storm_tuple_tree.png" /></div>
+<div align="center">![Alt miss](/media/storm_tuple_tree.png)</div>
  
 为了跟踪tuple树所有节点是否都正确处理了，一个简单地策略可能会在ackbolt节点中维护这颗树，然后当每一个输出消息成功或者失败时，往树的根方向反向传递成功或者失败的消息，但这种方案所需要消耗的资源显然比较多。
 
-为了高效，storm引入了一种理论上不可靠，但实际上足够可靠的方法。
+为了提高效率，storm引入了一种理论上不可靠但实际上足够可靠的方法。先给出此方案的简单地描述：
 
+每一个spout产生的原初tuple都生成一个64位long型随机数作为root-id。每个发送出去的副本也有一个edge-id（64位随机数，这样的副本每一个下游task都对应有一个，在topology上用一条边表示，所以叫edge-id）。spout将&lt;root-id,edge-id异或和,task-id&gt;发送给acker-bolt。
+
+每一个bolt接受到的tuple副本带有&lt;root-id,edge-id&gt;信息，如果某个tuple依赖于多个原初tuple，则有多个这样的值对(构成MessageId)。bolt在处理完后在此将此值对发送给ack-bolt以清零此副本edge-id在ack-val中的影响表明该副本处理完毕。注意如果bolt接受多个tuple产生一个衍生tuple，那么上述操作要一一执行。
+
+新产生的衍生tuple将其自身关联的&lt;root-id,edge-id&gt;一一发送给ack-bolt。以后的操作依次类推，当acker-bolt发现某root-id的ack-val归零后，即表明与root-id相关得所有处理流程都正确完结，通过关联的task-id就可以定位相应的spout task进行ack了。
+
+下面我们都假设topology都需要支持ack：
+当用户在自定义的spout中，调用SpoutOutputCollector.emit(new Values(...),MsgId)时的算法：
+
+    1    生成64位随机数root-id
+    3    初始化空集合acSeq
+    4    for t in out_tasks：
+    5        生成edge-id 
+    6        将edge-id添加到acSeq中
+    7        构造基于<root-id,edge-id>对的MessageId
+    8        发送Tuple<MessageId,Values>至task t
+    9    将用户传入的message-id、values以root-id保存在pending表中，以便实现超时控制，为ack、fail提供message-id标识
+    10    令ack-val=acSeq的所有edge-id的异或和
+    11    发送<root-id,ack-val,task-id>至acker-bolt
+
+
+当用户在自定义的bolt中，调用 BasicOutputCollector.emit(anchors,new Values(...))时的算法：
 
 
     bolt-emit
-    for t in outtasks
-        构造HashMap: anchors-to-ids
-        for Tuple a in  anchors
-            对每个a获取其关联的MessageId的 anchors的id集合，称为root-ids
-            当root-ids里的数目为0，则跳过本次循环
-            随机生成一个64位的edge-id
-            a.updateAckVal(edge-id)  ;异或,这个tuple需要在随后进行collector.ack
-            for root-id in root-ids
-                anchors-to-ids[root-id] ^=edge-id)
-        发送Tuple(worker-context,values,task-id,stream,MessageId(anchors-to-ids))
+    1    for t in outtasks:
+    2        构造HashMap: anchors-to-ids
+    3        for Tuple a in  anchors:
+    4            对每个a获取其关联的MessageId的 anchors的id集合，称为root-ids
+    5            当root-ids里的数目为0，则跳过本次循环
+    6            随机生成一个64位的edge-id
+    7            a.updateAckVal(edge-id)  ;异或,这个tuple需要在随后进行collector.ack
+    8            for root-id in root-ids:
+    9                anchors-to-ids[root-id] ^=edge-id)
+    10    发送Tuple<MessageId(anchors-to-ids),values>至task t
 
-bolt中要ack接受到的tuple时，调用下面的方法：
+
+看此段源代码时要注意一点，在为新消息构造edge-id的时候，不光对每个目标task生成一个独立的edge-id，对每个anchor也生成一个新的edge-id。因此共有task_num*anchor_num个edige-id生成。能不能只对每个task生成一个edge-id呢？
+
+答案是不能，因为假设我们有两个anchor，一个目标task，这两个anchor拥有共同的一个root-id，那么当对每一条需要ack的anchor都向acker-bolt发送&lt;root-id,input-tuple-edge-id^edge-id&gt;时，变回让ack-bolt上的ack-val的结果归零，从而导致错误。
+
+正因为如此，MessageId中的&lt;root-id,edge-id&gt;对并不与最初spout中的&lt;root-id,edge-id&gt;类似。而是形如&lt;root-id,edge-id1&edge-id2...&gt;。虚拟edige-id(x)的异或edge-id1&edge-id2...构成了真实的edge-id。经过分析可以看出之所以出现这种不自然的情况是因为在实现中，每个anchor是单独发ack-val给acker-bolt的。
+
+显然可以优化一下实现，使得MessageId中的anchors_to_ids的语义更清楚。我们只对每一个目标task生成一个edge-id. 将所有的anchors的&lt;root-id,edge-id&gt;合并在一个集合中。为某目标task发送副本的时候，用其中所有的root-id和本edge-id构成MessageId。然后将所有的新&lt;root-id,edge-id&gt;对与anchors的所有&lt;root-id,edge-id&gt;对一一作同root-id的edge-id异或后发送给acker-bolt。
+
+当用户在自定义bolt中，调用collector.ack(achors)时的算法：
 
     IOutputCollector.ack(tuple):
-    for (root-id,id) in tuple.getMessageId().getAnchorsToIds()
-        发送(root-id,id^tuple.getAckVal())
+    1    for (root-id,id) in tuple.getMessageId().getAnchorsToIds():
+    2        发送<root-id,id^tuple.getAckVal()>至acker-bolt
 
 
-这里root-id是spout在生成原初uple时赋予它的一个64位long型随机数ID，用于在ack过程中唯一标识该消息。与预期的可能不同，用户通过emit传入的MsgId与root-id没有关系。MsgId是用户提供的可能有业务意义的id，这个id将在ack，fail方法中被传回，让spout的编写者以有业务意义的方式来定义tuple，其用途也仅此而已。
+理解整个流程的关键是：
 
-这个root-id是整个tuple DAG中的核心标识，所有的衍生tuple都会在MessageId中存有它。当原初tuple从spout发出时，可能会向多个下游blot task发送，对于这样发送的每一个副本，系统都生成一个64位long型随机数来标示，这种标示符称为edge-id。系统将这些edge-id进行异或作为ack_val与root-id,task-id一起发送给acker-bolt。该task-id就是运行本spout的task的32位标识。因此acker-bolt为每一个原初tuple消耗20个字节。
-而给下游bolt task发送的tuple中包含一个叫MessageId的结构，里面是<root-id,edge-id>。
+1. 要理解该算法实质上是将tuple DAG结构打撒扁平化。编程中使用anchors关联衍生tuple时，看似是在构建tuple依赖图，但实际仅仅是关联到所依赖的原初tuple而已
+2. 每一个tuple副本均在发送后将其edge-id发送到acker-bolt 与相应root-id的ack-val异或并更新，该副本在被task接受后处理成功通过collector.ack再次发送edge-id到acker-bolt。
+
+####2.5.2 精确一次
+通过Trident支持的精确一次传送保证将数据流中的多个tuple组成一个batch，batch中的这批tuple一起构成一个事务，要么全部失败要么全部成功。batch之间的计算可以在某种程度上进行并发，但最后提交相同状态的更改时，必须按照先后顺序。
+
+为甚么支持精确一次，要采用batch的方式呢？这主要是因为性能的原因，也与精确一次传送保证在bolt需要维护中间计算状态时引入的复杂性有关。
+
+由于Trident方式与spark streaming没有本质区别，编程方式也没有它优雅简洁，因此我们对此不做深入讨论。
 
 
-衍生tuple可能有多个root-id，因为它的产生可能依赖于多个原初tuple。bolt在emit这种tuple时候提供anchors，即它所依赖的上游tuple列表。系统会提取
+ 
 
 
 
-
-
-
-（记着调研并行执行单元增加降低的情况，或者storm不允许运行时动态伸缩？）
-
-##3 samza
-
-##4 流计算常用模式
-
-hell
-
+##3 samza （待续）
 
 
 
