--- a/_posts/2015-8-15-storm.md
+++ b/_posts/2015-8-15-storm.md
@@ -180,10 +180,11 @@ storm支持“最多一次”、“至少一次”,"精确一次"三种消息保
     6        将edge-id添加到acSeq中
     7        构造基于<root-id,edge-id>对的MessageId
     8        发送Tuple<MessageId,Values>至task t
-    9    将用户传入的message-id、values以root-id保存在pending表中，以便实现超时控制，为ack、fail提供message-id标识
+    9    将用户传入的message-id、values以root-id为键保存在pending表中，以便实现超时控制，为ack、fail提供message-id标识
     10    令ack-val=acSeq的所有edge-id的异或和
     11    发送<root-id,ack-val,task-id>至acker-bolt
 
+这里特别需要注意的是，系统明明通过pending表保存了tuple数据，却没有自动实现重发，这导致用户在定义spout的时候，需要再次维护一个pending表。这可能是storm想让用户根据需要去实现更为灵活的重发机制。
 
 当用户在自定义的bolt中，调用 BasicOutputCollector.emit(anchors,new Values(...))时的算法：
 
