--- a/_posts/2015-8-15-storm.md
+++ b/_posts/2015-8-15-storm.md
@@ -206,7 +206,7 @@ storm支持“最多一次”、“至少一次”,"精确一次"三种消息保
 
 答案是不能，因为假设我们有两个anchor，一个目标task，这两个anchor拥有共同的一个root-id，那么当对每一条需要ack的anchor都向acker-bolt发送&lt;root-id,input-tuple-edge-id^edge-id&gt;时，变回让ack-bolt上的ack-val的结果归零，从而导致错误。
 
-正因为如此，MessageId中的&lt;root-id,edge-id&gt;对并不与最初spout中的&lt;root-id,edge-id&gt;类似。而是形如&lt;root-id,edge-id1&edge-id2...&gt;。虚拟edige-id(x)的异或edge-id1&edge-id2...构成了真实的edge-id。经过分析可以看出之所以出现这种不自然的情况是因为在实现中，每个anchor是单独发ack-val给acker-bolt的。
+正因为如此，MessageId中的&lt;root-id,edge-id&gt;对并不与最初spout中的&lt;root-id,edge-id&gt;类似。而是形如&lt;root-id,edge-id1^edge-id2...&gt;。虚拟edige-id(x)的异或edge-id1^edge-id2...构成了真实的edge-id。经过分析可以看出之所以出现这种不自然的情况是因为在实现中，每个anchor是单独发ack-val给acker-bolt的。
 
 显然可以优化一下实现，使得MessageId中的anchors_to_ids的语义更清楚。我们只对每一个目标task生成一个edge-id. 将所有的anchors的&lt;root-id,edge-id&gt;合并在一个集合中。为某目标task发送副本的时候，用其中所有的root-id和本edge-id构成MessageId。然后将所有的新&lt;root-id,edge-id&gt;对与anchors的所有&lt;root-id,edge-id&gt;对一一作同root-id的edge-id异或后发送给acker-bolt。
 
